--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -23,6 +23,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+
       - name: Use cached node_modules
         id: cache
         uses: actions/cache@v1
@@ -31,12 +32,21 @@ jobs:
           key: nodeModules-${{ hashFiles('**/yarn.lock') }}-${{ matrix.node-version }}
           restore-keys: |
             nodeModules-
+
       - name: Install dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm install
         env:
           CI: true
+
       - run: npm run prepare
       - run: npm test
         env:
           CI: true
+
+      - name: Release
+        if: matrix.node-version == '14.x'
+        run: npx semantic-release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
