--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -28,4 +28,4 @@ jobs:
       - run: npm test
         env:
           CI: true
-      - run: bash <(curl -s https://codecov.io/bash)
+      - run: bash <(curl -s --retry 5 --retry-delay 2 --connect-timeout 2 https://codecov.io/bash)
