--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "browserslist": "^4.12.0",
     "bytes": "^3.0.0",
     "chalk": "^3.0.0 || ^4.0.0",
+    "chokidar": "^3.4.2",
     "color": "^3.1.2",
     "detective": "^5.2.0",
     "fs-extra": "^8.0.0",
