--- a/package.json
+++ b/package.json
@@ -91,9 +91,8 @@
     "setupFilesAfterEnv": [
       "<rootDir>/jest/customMatchers.js"
     ],
-    "testPathIgnorePatterns": [
-      "<rootDir>/__tests__/fixtures/",
-      "<rootDir>/__tests__/util/"
+    "testMatch": [
+      "<rootDir>/__tests__/**/*.test.js"
     ]
   },
   "engines": {
