--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@badrap/bar-of-progress": "^0.1.1",
     "@docsearch/react": "^1.0.0-alpha.27",
+    "@headlessui/react": "^0.2.0",
     "@mdx-js/loader": "^1.6.13",
     "@next/bundle-analyzer": "^9.4.4",
     "@next/mdx": "^9.4.4",
@@ -26,11 +27,13 @@
     "dlv": "^1.1.3",
     "file-loader": "^6.0.0",
     "focus-visible": "^5.1.0",
+    "framer-motion": "^2.9.0",
     "front-matter": "^4.0.2",
     "glob": "^7.1.6",
     "gsap": "^3.4.2",
     "gzip-size": "^5.1.1",
     "minimatch": "^3.0.4",
+    "moo": "^0.5.1",
     "next": "^9.5.1",
     "postcss-nested": "^4.2.3",
     "prismjs": "^1.20.0",
