Move postcss to peerDependencies

--- a/package.json
+++ b/package.json
@@ -45,8 +45,12 @@
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.0.1",
     "jest": "^26.5.2",
+    "postcss": "^8.0.9",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.0"
+  },
+  "peerDependencies": {
+    "postcss": "^8.0.9"
   },
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^3.0.0",
