--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^1.1.1",
     "deasync": "^0.1.20",
     "dlv": "^1.1.3",
+    "exec-sh": "^0.3.4",
     "file-loader": "^6.0.0",
     "focus-visible": "^5.1.0",
     "framer-motion": "^2.9.1",
