--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clean-css": "^4.2.3",
     "clsx": "^1.1.1",
     "deasync": "^0.1.20",
+    "debounce": "^1.2.0",
     "dlv": "^1.1.3",
     "exec-sh": "^0.3.4",
     "file-loader": "^6.0.0",
