--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   ],
   "scripts": {
     "prebabelify": "rimraf lib",
-    "babelify": "babel src --out-dir lib --copy-files",
+    "babelify": "./scripts/build.sh",
     "rebuild-fixtures": "npm run babelify && babel-node scripts/rebuildFixtures.js",
     "prepublishOnly": "npm run babelify && babel-node scripts/build.js",
     "style": "eslint .",
@@ -59,6 +59,7 @@
     "color": "^3.1.3",
     "detective": "^5.2.0",
     "didyoumean": "^1.2.1",
+    "esbuild": "^0.8.0",
     "fs-extra": "^9.0.1",
     "html-tags": "^3.1.0",
     "lodash": "^4.17.20",
