--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "David Hemphill <davidlee.hemphill@gmail.com>"
   ],
   "scripts": {
-    "prebabelify": "rimraf lib",
-    "babelify": "./scripts/build.sh",
-    "rebuild-fixtures": "npm run babelify && babel-node scripts/rebuildFixtures.js",
-    "prepublishOnly": "npm run babelify && babel-node scripts/build.js",
+    "prebuild": "rimraf lib",
+    "build": "./scripts/build.sh",
+    "rebuild-fixtures": "npm run build && esbuild scripts/rebuildFixtures.js --bundle --log-level=error --platform=node --format=cjs --target=node12.13.0 | node",
+    "prepublishOnly": "npm run build && esbuild scripts/build.js --bundle --log-level=error --platform=node --format=cjs --target=node12.13.0 | node",
     "style": "eslint .",
     "test": "jest && eslint ."
   },
@@ -34,16 +34,12 @@
     "*.js"
   ],
   "devDependencies": {
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.12.3",
-    "@babel/node": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "babel-jest": "^26.5.2",
     "clean-css": "^4.1.9",
+    "esbuild": "^0.8.0",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.13.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^26.5.2",
+    "jest": "^26.6.1",
     "postcss": "^8.1.4",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.0"
@@ -59,7 +55,6 @@
     "color": "^3.1.3",
     "detective": "^5.2.0",
     "didyoumean": "^1.2.1",
-    "esbuild": "^0.8.0",
     "fs-extra": "^9.0.1",
     "html-tags": "^3.1.0",
     "lodash": "^4.17.20",
@@ -81,18 +76,6 @@
     "not ie 11",
     "not op_mini all"
   ],
-  "babel": {
-    "presets": [
-      [
-        "@babel/preset-env",
-        {
-          "targets": {
-            "node": "12.13.0"
-          }
-        }
-      ]
-    ]
-  },
   "jest": {
     "collectCoverage": true,
     "testTimeout": 30000,
@@ -102,7 +85,10 @@
     "testPathIgnorePatterns": [
       "<rootDir>/__tests__/fixtures/",
       "<rootDir>/__tests__/util/"
-    ]
+    ],
+    "transform": {
+      "\\.js$": "<rootDir>/jest/esbuild-transformer.js"
+    }
   },
   "engines": {
     "node": ">=12.13.0"
