--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "seedrandom": "^3.0.5",
     "simple-functional-loader": "^1.2.1",
     "stringify-object": "^3.3.0",
-    "tailwindcss": "^1.9.1",
+    "tailwindcss": "^2.0.0-alpha.5",
     "unist-util-visit": "^2.0.3"
   },
   "devDependencies": {
