--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@reach/rect": "^0.10.5",
     "@sindresorhus/slugify": "^1.1.0",
     "@svgr/webpack": "^5.4.0",
-    "autoprefixer": "^9.8.5",
+    "autoprefixer": "^10.0.1",
     "babel-plugin-preval": "^5.0.0",
     "brotli-size": "^4.0.0",
     "clean-css": "^4.2.3",
@@ -36,7 +36,8 @@
     "gsap": "^3.4.2",
     "gzip-size": "^5.1.1",
     "minimatch": "^3.0.4",
-    "next": "^10.0.0",
+    "next": "^10.0.1",
+    "postcss": "^8.1.4",
     "postcss-nested": "^4.2.3",
     "prismjs": "^1.20.0",
     "react": "16.13.1",
