--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "simple-functional-loader": "^1.2.1",
     "stringify-object": "^3.3.0",
     "tailwindcss": "^2.0.0-alpha.16",
+    "tinytime": "^0.2.6",
     "unist-util-visit": "^2.0.3"
   },
   "devDependencies": {
