add ResizeObserver and IntersectionObserver polyfills

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@badrap/bar-of-progress": "^0.1.1",
     "@docsearch/react": "^1.0.0-alpha.27",
     "@headlessui/react": "^0.2.0",
+    "@juggle/resize-observer": "^3.2.0",
     "@mdx-js/loader": "^1.6.21",
     "@next/bundle-analyzer": "^9.4.4",
     "@next/mdx": "^10.0.1",
@@ -36,6 +37,7 @@
     "glob": "^7.1.6",
     "gsap": "^3.4.2",
     "gzip-size": "^5.1.1",
+    "intersection-observer": "^0.11.0",
     "just-group-by": "^1.0.0",
     "minimatch": "^3.0.4",
     "next": "^10.0.1",
