--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "http-proxy-middleware": "^1.1.1",
     "jest": "^26.6.3",
     "postcss": "^8.2.8",
     "postcss-cli": "^8.3.1",
