--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prepublishOnly": "npm run babelify && babel-node scripts/build.js",
     "style": "eslint .",
     "test": "cross-env TAILWIND_MODE=build jest",
+    "test:integrations": "npm run test --prefix ./integrations",
     "posttest": "npm run style",
     "compat": "node scripts/compat.js --prepare",
     "compat:restore": "node scripts/compat.js --restore"
@@ -110,7 +111,8 @@
     "testTimeout": 30000,
     "setupFilesAfterEnv": [
       "<rootDir>/jest/customMatchers.js"
-    ]
+    ],
+    "testPathIgnorePatterns": ["/node_modules/", "/integrations/"]
   },
   "engines": {
     "node": ">=12.13.0"
