--- a/integrations/parcel/package.json
+++ b/integrations/parcel/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "postcss-cli",
+  "name": "parcel",
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "build": "NODE_ENV=production postcss ./src/index.css -o ./dist/main.css",
+    "build": "parcel build ./src/index.html --no-cache",
+    "dev": "parcel watch ./src/index.html --no-cache",
     "test": "jest"
   },
   "jest": {
-    "displayName": "PostCSS CLI",
+    "displayName": "parcel",
     "setupFilesAfterEnv": [
       "<rootDir>/../../jest/customMatchers.js"
     ]
   },
   "devDependencies": {
-    "postcss": "^8.2.15",
-    "postcss-cli": "^8.3.1"
+    "parcel": "nightly"
   }
 }
