--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "chalk": "^4.1.1",
     "chokidar": "^3.5.1",
     "color": "^3.1.3",
+    "cssnano": "^5.0.5",
     "detective": "^5.2.0",
     "didyoumean": "^1.2.1",
     "dlv": "^1.1.3",
