--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "scripts": {
     "prebabelify": "rimraf lib",
     "babelify": "babel src --out-dir lib --copy-files",
+    "postbabelify": "ncc build lib/cli-peer-dependencies.js",
     "rebuild-fixtures": "npm run babelify && babel-node scripts/rebuildFixtures.js",
     "prepublishOnly": "npm run babelify && babel-node scripts/build.js",
     "style": "eslint .",
