--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,6 @@
     "camelcase": ["error", { "allow": ["^unstable_"] }],
     "no-unused-vars": [2, { "args": "all", "argsIgnorePattern": "^_" }],
     "no-warning-comments": 0,
-    "prettier/prettier": ["error"]
+    "prettier/prettier": "error"
   }
 }
