--- a/package.json
+++ b/package.json
@@ -74,8 +74,8 @@
     "bytes": "^3.0.0",
     "chalk": "^4.1.1",
     "chokidar": "^3.5.2",
-    "color": "^3.2.0",
     "cosmiconfig": "^7.0.0",
+    "culori": "^0.19.1",
     "detective": "^5.2.0",
     "didyoumean": "^1.2.2",
     "dlv": "^1.1.3",
