--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "babelify": "babel src --out-dir lib --copy-files",
     "postbabelify": "ncc build lib/cli-peer-dependencies.js -o peers",
     "rebuild-fixtures": "npm run babelify && babel-node scripts/rebuildFixtures.js",
-    "prepublishOnly": "npm install --force && npm run babelify && babel-node scripts/build.js && node scripts/build-plugins.js",
+    "prepublishOnly": "npm install --force && npm run babelify && node scripts/build-plugins.js",
     "style": "eslint .",
     "test": "cross-env TAILWIND_MODE=build jest",
     "test:integrations": "npm run test --prefix ./integrations",
@@ -50,7 +50,6 @@
     "@vercel/ncc": "^0.29.2",
     "autoprefixer": "^10.3.3",
     "babel-jest": "^27.0.6",
-    "clean-css": "5.1.4",
     "cross-env": "^7.0.3",
     "cssnano": "^5.0.8",
     "eslint": "^7.32.0",
