--- a/package.json
+++ b/package.json
@@ -43,14 +43,14 @@
     "intersection-observer": "^0.11.0",
     "just-group-by": "^1.0.0",
     "minimatch": "^3.0.4",
-    "next": "^10.0.1",
+    "next": "^11.1.2",
     "postcss": "^8.2.10",
     "postcss-focus-visible": "^5.0.0",
     "postcss-import": "^14.0.1",
     "postcss-nested": "^4.2.3",
     "prismjs": "^1.23.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.29.0",
     "redent": "^3.0.0",
     "seedrandom": "^3.0.5",
