--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "dlv": "^1.1.3",
     "fast-glob": "^3.2.7",
     "glob-parent": "^6.0.1",
+    "is-color-stop": "^1.1.0",
     "is-glob": "^4.0.1",
     "normalize-path": "^3.0.0",
     "object-hash": "^2.2.0",
