--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@babel/node": "^7.12.13",
     "@babel/preset-env": "^7.15.0",
     "@tailwindcss/aspect-ratio": "^0.2.1",
-    "@vercel/ncc": "^0.29.2",
+    "@vercel/ncc": "^0.30.0",
     "autoprefixer": "^10.3.3",
     "babel-jest": "^27.0.6",
     "clean-css": "5.1.4",
@@ -83,6 +83,7 @@
     "fs-extra": "^10.0.0",
     "glob-parent": "^6.0.1",
     "html-tags": "^3.1.0",
+    "is-color-stop": "^1.1.0",
     "is-glob": "^4.0.1",
     "lodash": "^4.17.21",
     "lodash.topath": "^4.5.2",
