--- a/.github/workflows/release-insiders.yml
+++ b/.github/workflows/release-insiders.yml
@@ -47,8 +47,8 @@ jobs:
         id: vars
         run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
 
-      - name: "Version based on commit: 0.0.0-${{ steps.vars.outputs.sha_short }}"
-        run: npm version 0.0.0-${{ steps.vars.outputs.sha_short }}
+      - name: "Version based on commit: 0.0.0-insiders.${{ steps.vars.outputs.sha_short }}"
+        run: npm version 0.0.0-insiders.${{ steps.vars.outputs.sha_short }}
 
       - name: Publish
         run: npm publish --tag insiders
