--- a/integrations/postcss-cli/package.json
+++ b/integrations/postcss-cli/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "build": "NODE_ENV=production postcss ./src/index.css -o ./dist/main.css",
+    "build": "NODE_ENV=production postcss ./src/index.css -o ./dist/main.css --verbose",
     "test": "jest --runInBand --forceExit"
   },
   "jest": {
