drop `Build` step from CI
The build step is not a prerequisite anymore for running the tests. When
we want to release a new (insiders) release, the `prepublishOnly` step
will be executed for us.

Before this change, it would have been executed twice:
- Once before the tests
- Once before the actual release

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -36,7 +36,8 @@ jobs:
         run: npm install
         env:
           CI: true
-      - run: npm run prepublishOnly
-      - run: npm test
+
+      - name: Test
+        run: npm test
         env:
           CI: true
