--- a/package.json
+++ b/package.json
@@ -65,7 +65,6 @@
   },
   "dependencies": {
     "arg": "^5.0.1",
-    "chalk": "^4.1.2",
     "chokidar": "^3.5.2",
     "color-name": "^1.1.4",
     "cosmiconfig": "^7.0.1",
@@ -77,6 +76,7 @@
     "is-glob": "^4.0.3",
     "normalize-path": "^3.0.0",
     "object-hash": "^2.2.0",
+    "picocolors": "^1.0.0",
     "postcss-js": "^4.0.0",
     "postcss-load-config": "^3.1.0",
     "postcss-nested": "5.0.6",
