--- a/package.json
+++ b/package.json
@@ -1,22 +1,110 @@
 {
-  "name": "tailwindcss",
-  "version": "3.0.10",
-  "description": "A utility-first CSS framework for rapidly building custom user interfaces.",
-  "license": "MIT",
-  "main": "lib/index.js",
-  "style": "dist/tailwind.css",
-  "repository": "https://github.com/tailwindlabs/tailwindcss.git",
-  "bugs": "https://github.com/tailwindlabs/tailwindcss/issues",
-  "homepage": "https://tailwindcss.com",
-  "bin": {
-    "tailwind": "lib/cli.js",
-    "tailwindcss": "lib/cli.js"
+  "devDependencies": {
+    "autoprefixer": "^10.4.1",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.10",
+    "vite": "^2.7.10"
   },
-  "contributors": [
-    "Adam Wathan <adam.wathan@gmail.com>",
-    "Jonathan Reinink <jonathan@reinink.ca>",
-    "David Hemphill <davidlee.hemphill@gmail.com>"
-  ],
+  "name": "tailwind-tut",
+  "version": "1.0.0",
+  "main": "postcss.config.js",
+  "dependencies": {
+    "acorn": "^7.4.1",
+    "acorn-node": "^1.8.2",
+    "acorn-walk": "^7.2.0",
+    "ansi-styles": "^4.3.0",
+    "anymatch": "^3.1.2",
+    "arg": "^5.0.1",
+    "balanced-match": "^1.0.2",
+    "binary-extensions": "^2.2.0",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "browserslist": "^4.19.1",
+    "callsites": "^3.1.0",
+    "camelcase-css": "^2.0.1",
+    "caniuse-lite": "^1.0.30001294",
+    "chalk": "^4.1.2",
+    "chokidar": "^3.5.2",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "concat-map": "^0.0.1",
+    "cosmiconfig": "^7.0.1",
+    "cssesc": "^3.0.0",
+    "defined": "^1.0.0",
+    "detective": "^5.2.0",
+    "didyoumean": "^1.2.2",
+    "dlv": "^1.1.3",
+    "electron-to-chromium": "^1.4.30",
+    "error-ex": "^1.3.2",
+    "esbuild": "^0.13.15",
+    "esbuild-windows-64": "^0.13.15",
+    "escalade": "^3.1.1",
+    "escape-string-regexp": "^1.0.5",
+    "fast-glob": "^3.2.7",
+    "fastq": "^1.13.0",
+    "fill-range": "^7.0.1",
+    "fraction.js": "^4.1.2",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.1",
+    "glob": "^7.2.0",
+    "glob-parent": "^6.0.2",
+    "has": "^1.0.3",
+    "has-flag": "^4.0.0",
+    "import-cwd": "^3.0.0",
+    "import-fresh": "^3.3.0",
+    "import-from": "^3.0.0",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "is-arrayish": "^0.2.1",
+    "is-binary-path": "^2.1.0",
+    "is-core-module": "^2.8.0",
+    "is-extglob": "^2.1.1",
+    "is-glob": "^4.0.3",
+    "is-number": "^7.0.0",
+    "js-tokens": "^4.0.0",
+    "json-parse-even-better-errors": "^2.3.1",
+    "lilconfig": "^2.0.4",
+    "lines-and-columns": "^1.2.4",
+    "merge2": "^1.4.1",
+    "micromatch": "^4.0.4",
+    "minimatch": "^3.0.4",
+    "minimist": "^1.2.5",
+    "nanoid": "^3.1.30",
+    "node-releases": "^2.0.1",
+    "normalize-path": "^3.0.0",
+    "normalize-range": "^0.1.2",
+    "object-hash": "^2.2.0",
+    "once": "^1.4.0",
+    "parent-module": "^1.0.1",
+    "parse-json": "^5.2.0",
+    "path-is-absolute": "^1.0.1",
+    "path-parse": "^1.0.7",
+    "path-type": "^4.0.0",
+    "picocolors": "^1.0.0",
+    "picomatch": "^2.3.0",
+    "postcss-js": "^3.0.3",
+    "postcss-load-config": "^3.1.0",
+    "postcss-nested": "^5.0.6",
+    "postcss-selector-parser": "^6.0.8",
+    "postcss-value-parser": "^4.2.0",
+    "queue-microtask": "^1.2.3",
+    "quick-lru": "^5.1.1",
+    "readdirp": "^3.6.0",
+    "resolve": "^1.20.0",
+    "resolve-from": "^4.0.0",
+    "reusify": "^1.0.4",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.62.0",
+    "run-parallel": "^1.2.0",
+    "source-map-js": "^1.0.1",
+    "supports-color": "^7.2.0",
+    "tmp": "^0.2.1",
+    "to-regex-range": "^5.0.1",
+    "util-deprecate": "^1.0.2",
+    "wrappy": "^1.0.2",
+    "xtend": "^4.0.2",
+    "yaml": "^1.10.2"
+  },
   "scripts": {
     "preswcify": "npm run generate:plugin-list && rimraf lib",
     "swcify": "swc src --out-dir lib --copy-files",
@@ -29,85 +117,10 @@
     "test:integrations": "npm run test --prefix ./integrations",
     "install:integrations": "node scripts/install-integrations.js",
     "posttest": "npm run style",
-    "generate:plugin-list": "node -r @swc/register scripts/create-plugin-list.js"
+    "generate:plugin-list": "node -r @swc/register scripts/create-plugin-list.js" 
   },
-  "files": [
-    "src/*",
-    "cli/*",
-    "lib/*",
-    "peers/*",
-    "scripts/*.js",
-    "stubs/*.stub.js",
-    "nesting/*",
-    "*.css",
-    "*.js"
-  ],
-  "devDependencies": {
-    "@swc/cli": "^0.1.55",
-    "@swc/core": "^1.2.118",
-    "@swc/jest": "^0.2.15",
-    "@swc/register": "^0.1.7",
-    "autoprefixer": "^10.4.0",
-    "cross-env": "^7.0.3",
-    "cssnano": "^5.0.14",
-    "esbuild": "^0.14.2",
-    "eslint": "^8.4.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.4.5",
-    "jest-diff": "^27.4.2",
-    "postcss": "^8.4.5",
-    "postcss-cli": "^8.3.1",
-    "prettier": "^2.5.1",
-    "rimraf": "^3.0.0"
-  },
-  "peerDependencies": {
-    "autoprefixer": "^10.0.2",
-    "postcss": "^8.0.9"
-  },
-  "dependencies": {
-    "arg": "^5.0.1",
-    "chalk": "^4.1.2",
-    "chokidar": "^3.5.2",
-    "color-name": "^1.1.4",
-    "cosmiconfig": "^7.0.1",
-    "detective": "^5.2.0",
-    "didyoumean": "^1.2.2",
-    "dlv": "^1.1.3",
-    "fast-glob": "^3.2.7",
-    "glob-parent": "^6.0.2",
-    "is-glob": "^4.0.3",
-    "normalize-path": "^3.0.0",
-    "object-hash": "^2.2.0",
-    "postcss-js": "^4.0.0",
-    "postcss-load-config": "^3.1.0",
-    "postcss-nested": "5.0.6",
-    "postcss-selector-parser": "^6.0.7",
-    "postcss-value-parser": "^4.2.0",
-    "quick-lru": "^5.1.1",
-    "resolve": "^1.20.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "not edge <= 18",
-    "not ie 11",
-    "not op_mini all"
-  ],
-  "jest": {
-    "testTimeout": 30000,
-    "setupFilesAfterEnv": [
-      "<rootDir>/jest/customMatchers.js"
-    ],
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      "/integrations/",
-      "/standalone-cli/"
-    ],
-    "transform": {
-      "\\.js$": "@swc/jest"
-    }
-  },
-  "engines": {
-    "node": ">=12.13.0"
-  }
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
