Ignore examples folder when testing

--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     ],
     "testPathIgnorePatterns": [
       "/node_modules/",
+      "/examples/",
       "/integrations/",
       "/standalone-cli/"
     ],
