Upgrade `@docsearch/react` to `3.0.0` (#1249)

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "dependencies": {
     "@badrap/bar-of-progress": "^0.1.1",
-    "@docsearch/react": "1.0.0-alpha.27",
+    "@docsearch/react": "^3.0.0",
     "@headlessui/react": "^0.0.0-insiders.336faab",
     "@juggle/resize-observer": "^3.2.0",
     "@mdx-js/loader": "^1.6.21",
