uninstall eslint-plugin-prettier from devDependencies and fix eslintrc

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,11 +7,9 @@
     "sourceType": "module"
   },
   "extends": ["prettier"],
-  "plugins": ["prettier"],
   "rules": {
     "camelcase": ["error", { "allow": ["^unstable_"] }],
     "no-unused-vars": [2, { "args": "all", "argsIgnorePattern": "^_" }],
-    "no-warning-comments": 0,
-    "prettier/prettier": "error"
+    "no-warning-comments": 0
   }
 }
