Move content resolution tests to integration

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -16,6 +16,7 @@ jobs:
     strategy:
       matrix:
         integration:
+          - content-resolution
           - parcel
           - postcss-cli
           - rollup
