--- a/.github/workflows/release-insiders.yml
+++ b/.github/workflows/release-insiders.yml
@@ -59,10 +59,11 @@ jobs:
 
       - name: Resolve version
         id: vars
-        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+        run: |
+          echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
-      - name: "Version based on commit: 0.0.0-insiders.${{ steps.vars.outputs.sha_short }}"
-        run: npm version 0.0.0-insiders.${{ steps.vars.outputs.sha_short }} --force --no-git-tag-version
+      - name: "Version based on commit: 0.0.0-insiders.${{ env.sha_short }}"
+        run: npm version 0.0.0-insiders.${{ env.sha_short }} --force --no-git-tag-version
 
       - name: Publish
         run: npm publish --tag insiders
@@ -81,6 +82,6 @@ jobs:
               ref: 'master',
               workflow_id: 'upgrade-tailwindcss.yml',
               inputs: {
-                insidersVersion: '0.0.0-insiders.${{ steps.vars.outputs.sha_short }}'
+                insidersVersion: '0.0.0-insiders.${{ env.sha_short }}'
               }
             })
