use `strategy` for defining the node version

--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -13,10 +13,16 @@ permissions:
   contents: read
 
 jobs:
-  build_cli:
+  build:
     permissions:
       contents: write  # for softprops/action-gh-release to create GitHub release
+
     runs-on: macos-11
+
+    strategy:
+      matrix:
+        node-version: [16]
+
     steps:
       - uses: actions/checkout@v3
 
@@ -27,10 +33,10 @@ jobs:
         run: |
           echo "TAG_NAME=$(git describe --tags --abbrev=0)" >> $GITHUB_ENV
 
-      - name: Use Node.js 16
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: ${{ matrix.node-version }}
           registry-url: 'https://registry.npmjs.org'
 
       - name: Build tailwindcss
