Include new compiled typescript stuff when publishing

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "tailwindcss": "lib/cli.js"
   },
   "scripts": {
-    "preswcify": "npm run generate && rimraf lib",
+    "package:build": "npm run --prefix ./oxide/packages/tailwindcss build",
+    "preswcify": "npm run generate && rimraf lib && npm run package:build",
     "swcify": "swc src --out-dir lib --copy-files",
     "postswcify": "esbuild lib/cli-peer-dependencies.js --bundle --platform=node --outfile=peers/index.js",
     "rebuild-fixtures": "npm run swcify && node -r @swc/register scripts/rebuildFixtures.js",
@@ -36,6 +37,7 @@
     "cli/*",
     "lib/*",
     "peers/*",
+    "oxide/packages/tailwindcss/dist/*.js",
     "scripts/*.js",
     "stubs/*.stub.js",
     "nesting/*",
