--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
     "*.js"
   ],
   "devDependencies": {
-    "@swc/cli": "^0.1.59",
-    "@swc/core": "^1.3.24",
-    "@swc/jest": "^0.2.24",
-    "@swc/register": "^0.1.10",
+    "@swc/cli": "0.1.59",
+    "@swc/core": "1.3.24",
+    "@swc/jest": "0.2.24",
+    "@swc/register": "0.1.10",
     "autoprefixer": "^10.4.13",
     "concurrently": "^7.5.0",
     "cssnano": "^5.1.14",
