setup turbo repo + remote caching

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -14,6 +14,8 @@ permissions:
 
 env:
   CI: true
+  TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+  TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
 
 jobs:
   build:
@@ -45,10 +47,10 @@ jobs:
         run: npm install && npm run oxide:install
 
       - name: Build Tailwind CSS
-        run: npm run oxide:build
+        run: turbo run oxide:build
 
       - name: Test
-        run: npm test
+        run: turbo run test
 
   lint:
     runs-on: ubuntu-latest
