--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "jest-diff": "^28.1.3",
     "prettier": "^2.8.1",
     "rimraf": "^3.0.0",
-    "source-map-js": "^1.0.2"
+    "source-map-js": "^1.0.2",
+    "turbo": "^1.6.3"
   },
   "peerDependencies": {
     "postcss": "^8.0.9"
@@ -83,7 +84,7 @@
     "normalize-path": "^3.0.0",
     "object-hash": "^3.0.0",
     "picocolors": "^1.0.0",
-    "postcss": "^8.4.20",
+    "postcss": "^8.0.9",
     "postcss-import": "^14.1.0",
     "postcss-js": "^4.0.0",
     "postcss-load-config": "^3.1.4",
