--- a/integrations/vite/package.json
+++ b/integrations/vite/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite",
+  "name": "@tailwindcss/integrations-vite",
   "private": true,
   "version": "0.0.0",
   "main": "./src/index.js",
